<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background_color_item"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/it_time_first_text"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ds"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/fr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_12sdp"                android:fontFamily="@font/ds"
                android:text="@string/choose_text_game"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
/>

            <TextView
                android:id="@+id/fr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_12sdp"                android:fontFamily="@font/ds"
                android:text="@string/true_text_game"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/fr1"
/>

            <TextView
                android:id="@+id/fr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/ds"
                android:text="@string/file_text_game"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fr2"
/>


            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginVertical="@dimen/_25sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fr3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <info.hoang8f.widget.FButton
        android:id="@+id/ok_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ds"
        android:text="@string/ok"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_21ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>