<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".ui.SettingsApp"
    android:configChanges="uiMode">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/v1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/settings"
                app:layout_constraintEnd_toStartOf="@id/settings"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ds"
                android:text="@string/Setting"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/settings"
                app:layout_constraintEnd_toStartOf="@id/back_icon_s"
                app:layout_constraintStart_toEndOf="@id/settings"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/back_icon_s"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:rotation="-90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/back" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch1"
                        style="@style/TextShadowStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:checked="true"
                        android:fontFamily="@font/we"
                        android:textOff="@string/o"
                        android:textOn="@string/i"
                        android:thumb="@drawable/themped"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:showText="true"
                        app:switchTextAppearance="@style/CustomSwitchCompat"
                        app:track="@drawable/track" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/sounds"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card2"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card1">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch2"
                        style="@style/TextShadowStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:checked="false"
                        android:fontFamily="@font/we"
                        android:textOff="@string/o"
                        android:textOn="@string/i"
                        android:thumb="@drawable/themped"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:showText="true"
                        app:switchTextAppearance="@style/CustomSwitchCompat"
                        app:track="@drawable/track" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/notification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card3"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card2">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch3"
                        style="@style/TextShadowStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:textOff="@string/o"
                        android:textOn="@string/i"
                        android:thumb="@drawable/themped"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:showText="true"
                        app:switchTextAppearance="@style/CustomSwitchCompat"
                        app:track="@drawable/track" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/thedarkmode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card4"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card3">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/left_icon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:rotation="-90"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/left" />


                    <TextView
                        android:id="@+id/lan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/languages"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/additional"
                app:layout_constraintEnd_toStartOf="@id/additional"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/card4" />


            <TextView
                android:id="@+id/additional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ds"
                android:text="@string/additional_settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card4" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"

                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/additional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/additional"
                app:layout_constraintTop_toBottomOf="@+id/card4" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/additional">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <info.hoang8f.widget.FButton
                        android:id="@+id/profile"
                        style="@style/TextShadowStyle"
                        android:layout_width="@dimen/_85sdp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <info.hoang8f.widget.FButton
                        android:id="@+id/reset"
                        style="@style/TextShadowStyle"
                        android:layout_width="@dimen/_85sdp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_24sdp"
                        android:fontFamily="@font/we"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>